fix/fix-contentOverlaping

--- a/styles/AboutPage.module.css
+++ b/styles/AboutPage.module.css
@@ -13,10 +13,9 @@
   padding-bottom: 100px;
 }
 .grid {
-  display: grid;
+  display: flex;
   place-items: center;
   grid-gap: 5px;
-  grid-template-columns: auto auto auto;
 }
 .cardAbout h2 {
   color: #7f6af3;
@@ -30,7 +29,7 @@
   border: 1px solid #fff;
   border-radius: 10px;
   transition: color 0.15s ease, border-color 0.15s ease;
-  max-width: 350px;
+  max-width: 420px;
   min-height: 300px;
 }
 .cardLang {
